Fix some layout bugs, also support taxon links

--- a/viewer_app/web/styles/article.scss
+++ b/viewer_app/web/styles/article.scss
@@ -77,6 +77,7 @@
   cursor: pointer;
   color: rgba(0, 0, 0, 0.7);
   box-shadow: inset 0 0 0 0 black;
+  white-space: pre;
   display: inline-block;
 
   &::after {
